--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
     "vue-simple-alert": "^1.1.1",
     "vuejs-loading-plugin": "^1.0.51"
