--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@syncfusion/ej2-vue-dropdowns": "^18.1.52",
     "axios": "^0.19.2",
     "bulma": "^0.8.0",
     "core-js": "^3.6.4",
@@ -14,6 +15,7 @@
     "vue-moment": "^4.1.0",
     "vue-router": "^3.1.6",
     "vue-simple-alert": "^1.1.1",
+    "vue2-autocomplete-js": "^0.2.2",
     "vuejs-loading-plugin": "^1.0.51"
   },
   "devDependencies": {
